checkstyle fixes and base64 encoding using apache commons coding